--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,12 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Dependencies.cmake)
 The paths found will be available within the `SOURCE_FILES` variable.
 ]]
 file(GLOB_RECURSE SOURCE_FILES src/*.c)
+file(GLOB_RECURSE HEADER_FILES include/*.h)
 
 #[[ Build ]]
 # Creates an executable named $PROJECT_NAME using the .c files.
 # NOTE!: This should come before [[ Dependencies ]].
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES})
 
 #[[ Dependencies ]]
 add_git_dependency(${PROJECT_NAME} raylib https://github.com/raysan5/raylib.git 5.0 PRIVATE)
